# gait

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
src/gait/: ai_commit.py  ai_pr.py  git_wrapper.py  github_wrapper.py  linear_client.py  main.py  utils.py
