[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gait"
version = "0.1.0"
description = "A Git wrapper tool"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
]

dependencies = [
]

[project.scripts]
gait = "gait.main:main"

[project.urls]
"Homepage" = "https://github.com/EmpyreanTechnologiesInc/gait.git"

[tool.setuptools.packages.find]
where = ["src"]
include = ["gait*"]